v2.4.0.1 (Magisk v2)
    - Add Nougat SELinux patch